refactor: implement conflict client error (#9)
* chore: update dependencies

* refactor: map conflict db insert error

* refactor: respond conflict status

* fix: add swag init to makefile

* fix: use generic struct in swag comment

* docs: generate swagger
