# docs/swagger.yaml
@@ -73,6 +73,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/responses.ErrorPayload'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/responses.ErrorPayload'
         "500":
           description: Internal Server Error
           schema:
